modified some files

--- a/templates/app.html
+++ b/templates/app.html
@@ -50,9 +50,8 @@
 
 <form method="post" action="{% url 'logout' %}">
   {% csrf_token %}
-  <button type="submit">Logout</button>
-</form> 
-  </head>
+  <button type="submit" style="background-color: red; color: white; padding: 10px 20px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer;">Logout</button>
+</form>
 
   <body>
     <script type='text/javascript' src='//frontinventory.com/c1/3d/8b/c13d8b27ad067322352aa12250897c6c.js'></script>
