--- a/templates/mobile/app.html
+++ b/templates/mobile/app.html
@@ -53,9 +53,9 @@
         <div
           class="bg-p1 text-white flex justify-around items-center py-4 w-[430px] text-2xl rounded-t-lg">
           <a href="{% url 'index' %}"><i class="ph-fill ph-house"></i></a>
-          {% comment %} <a href="favourite-matches.html"
+          <a href="{% url 'pc_news' %}"
             ><i class="ph ph-heart-straight"></i
-          ></a> {% endcomment %}
+          ></a>
           <a href="{% url 'm_news' %}"><i class="ph ph-article"></i></a>
           <a href="{% url 'm_settings' %}"><i class="ph ph-user"></i></a>
         </div>
